helm/resources/domains/dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - dashboard.ext.md
    secretName: dashbboard-tls
  rules:
  - host: dashboard.ext.md
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 8007
