helm/resources/domains/extmd-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: extmd
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - ext.md
    secretName: extmd-tls
  rules:
  - host: ext.md
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 8008
