helm/resources/domains/fiak-www-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fiak-www
  annotations:
    kubernetes.io/tls-acme: "false"
    kubernetes.io/ingress.class: "nginx"
    ## NOTE: The below should work but does not, the snippet is probably injected in the wrong place or not at all
    ##       So instead redirecting from Node.
    # ingress.kubernetes.io/configuration-snippet: return 302 https://filosofianakatemia.fi$request_uri;
spec:
  rules:
  - host: www.filosofianakatemia.fi
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 8009
