helm/resources/domains/piwik-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: piwik
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - piwik.ext.md
    secretName: piwik-tls
  rules:
  - host: piwik.ext.md
    http:
      paths:
      - path: /
        backend:
          serviceName: piwik
          servicePort: 8006
